<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_420"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/vIvOrange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/about_orange"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/orange"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/vIvBackArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/dp_2"
                        android:paddingRight="@dimen/dp_2"
                        tools:ignore="RtlSymmetry"
                        tools:src="@drawable/ic_arrow" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_0"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_heart_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/vIvHeart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_2"
                        tools:src="@drawable/ic_heart" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_brow" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_60"
                android:background="@drawable/ic_rate_btn"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/vIvUserOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginLeft="@dimen/dp_32"
                    tools:src="@drawable/ic_user" />

                <ImageView
                    android:id="@+id/vIvUserTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_20"
                    tools:src="@drawable/ic_user" />

                <ImageView
                    android:id="@+id/vIvUserThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_8"
                    tools:src="@drawable/ic_user" />

                <TextView
                    android:id="@+id/vTvRate"
                    style="@style/Button.Rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/dp_22"
                    android:layout_marginRight="@dimen/dp_22"
                    android:text="@string/number" />

                <ImageView
                    android:id="@+id/vIvStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    tools:src="@drawable/ic_star" />

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/vTvProductName"
                    style="@style/TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/about_orange" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <TextView
                android:id="@+id/vTvProductInfo"
                style="@style/TextView.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:lineSpacingExtra="@dimen/sp_6"
                android:paddingStart="@dimen/dp_16"
                android:paddingLeft="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/main_text" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorWhite"
        android:paddingBottom="@dimen/dp_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vTvBestSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/ic_add_btn"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vTvAdd"
                style="@style/Button.Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_18"
                android:text="@string/add_to_bag" />

            <ImageView
                android:id="@+id/vIvBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:src="@drawable/ic_bag" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_48"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vTvPrice"
                style="@style/TextView.Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:id="@+id/vTvPerKg"
                style="@style/TextView.PerKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_24"
                android:text="@string/per_kg" />

        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>