<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_420"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/vIvOrange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_orange"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/vLlUserProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_rec_48_round_14"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/vIvUserProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/dp_2"
                        tools:ignore="RtlSymmetry"
                        tools:src="@drawable/ic_arrow" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_oval_50_round_14"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/vIvHeart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_2"
                        tools:src="@drawable/ic_heart" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:layout_gravity="bottom"
                android:src="@drawable/bg_white_rec_round_40" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_60"
                android:background="@drawable/bg_white_rec_round_32">

                <ImageView
                    android:id="@+id/vIvUserOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/dp_32"
                    tools:src="@drawable/ic_user" />

                <ImageView
                    android:id="@+id/vIvUserTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/dp_20"
                    tools:src="@drawable/ic_user" />

                <ImageView
                    android:id="@+id/vIvUserThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/dp_8"
                    tools:src="@drawable/ic_user" />

                <TextView
                    android:id="@+id/vTvRateMark"
                    style="@style/Button.Rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/dp_22"
                    tools:text="@string/rate_mark" />

                <ImageView
                    android:id="@+id/vIvStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/dp_8"
                    tools:src="@drawable/ic_star" />

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/vTvProductName"
                    style="@style/TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/about_orange" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <TextView
                android:id="@+id/vTvProductInfo"
                style="@style/TextView.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:lineSpacingExtra="@dimen/sp_6"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vTvBestSeller"
            style="@style/TextView.BestSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/best_seller" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vTvPrice"
                    style="@style/TextView.Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/vTvPerKg"
                    style="@style/TextView.PerKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/per_kg" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/vLlAddToBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:background="@drawable/bg_yellow_rec_round_14"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vTvAddToBag"
                    style="@style/Button.Add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_18"
                    android:text="@string/add_to_bag"/>

                <ImageView
                    android:id="@+id/vIvBag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:src="@drawable/ic_bag" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>